Add possibility to extract misaligned text

--- a/vignettes/textalignment.Rmd
+++ b/vignettes/textalignment.Rmd
@@ -87,6 +87,6 @@ substr(overview$b, overview$b_from, overview$b_to)
 
 ```{r}
 x <- smith_waterman(a, b)
-x <- as.data.frame(x)
+x <- as.data.frame(x, alignment_id = "matching-a-to-b")
 str(x)
 ```
